src/main/resources/org/controlsfx/dialogs/dialogs.css
.root {
    -fx-background-color: inherit;
}

/*******************************************************************************
 *                                                                             *
 * Window buttons: Close, Minimize, Maximize                                   *
 *                                                                             *
 ******************************************************************************/

.dialog {
    -fx-padding: -1;
    -fx-border-insets: 0 10 10 0;
    -fx-border-width: 2;
    -fx-border-radius: 5 5 0 0;
    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 11, 0.0, 3, 3);
    -fx-border-color: #a3a3a3;
}

.dialog:active {
    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.4), 11, 0.0, 3, 3);
    -fx-border-color: #3e3e3e;
}

.dialog > * > .window-header {
    -fx-padding: 0 3 0 8;
    -fx-background-color: linear-gradient(#cccccc, #bababa 37%, #a6a6a6);
    -fx-background-radius: 5 5 0 0;
}

.dialog:active > * > .window-header {
    -fx-background-color: linear-gradient(#595959, #474747 37%, #343434);
}

.dialog > * > .window-header > * > .window-title {
    -fx-padding: 0 0 0 0;
    -fx-alignment: center;
    -fx-font-size: 1.166667em; /*15px;*/
    -fx-text-fill: #808080;
}

.dialog:active > * > .window-header > * > .window-title {
    -fx-text-fill: #ebebeb;
}

.dialog > .window-resize-corner {
    -fx-fill: transparent;
    -fx-cursor: se_resize;
}

.dialog > * > .window-header > * > .window-buttons > .window-button {
    -fx-background-color: transparent transparent;
    -fx-background-insets: 0, 1;
    -fx-background-radius: 2;
    -fx-padding: 0 0 0 0;
    -fx-alignment: center;
}

.dialog:active .window-button:hover {
    -fx-background-color: linear-gradient(#505050,#2d2d2d),
                          linear-gradient(#a3a3a3, #8b8b8b 34%, #777777 36%, #777777 63%, #8b8b8b 65%, #adadad);
}

.dialog .window-buttons {
    -fx-padding: 6 0 0 0;
}

.dialog .window-button:pressed {
    -fx-background-color: linear-gradient(#515151,#202020),
                          linear-gradient(#a3a3a3, #8b8b8b 34%, #777777 36%, #777777 63%, #8b8b8b 65%, #adadad);
}

.dialog .window-button > .graphic {
    -fx-background-color: #949494;
    -fx-scale-shape: false;
    -fx-padding: 4.5 4.5 4.5 4.5; /* Graphic is 9x9 px */
}

.dialog:active .window-button:hover > .graphic {
    -fx-background-color: #fefeff;
}

.dialog .window-button:pressed > .graphic {
    -fx-background-color: #cfcfcf;
}

.dialog .window-close-button > .graphic {
    -fx-shape: "M395.992,296.758l1.794-1.794l7.292,7.292l-1.795,1.794 L395.992,296.758z M403.256,294.992l1.794,1.794l-7.292,7.292l-1.794-1.795 L403.256,294.992z";
}

.dialog .window-minimize-button > .graphic {
    -fx-shape: "M420.012,299.248v2.537h-9.001v-2.537H420.012z";
}

.dialog .window-maximize-button > .graphic {
    -fx-shape: "M406.283,294.985h2.537v9.031h-2.538L406.283,294.985z M412.012,298.248v2.537h-9.001v-2.537H412.012z";
}


/*******************************************************************************
 *                                                                             *
 * Masthead                                                                    *
 *                                                                             *
 ******************************************************************************/
 
.dialog:masthead .masthead-panel {
    -fx-padding: 10 14 10 14;
    -fx-background-color: linear-gradient(#e2e2e2,#e2e2e2,#eeeeee);
    -fx-border-color: transparent transparent #b4b4b4 transparent;
}

.dialog:masthead .masthead-panel .label {
    -fx-font-size: 1.249999em; 
    -fx-wrap-text: true;
}


/*******************************************************************************
 *                                                                             *
 * Content area of the Dialog                                                  *
 *                                                                             *
 ******************************************************************************/
 
.dialog > * > .content-pane {
    -fx-background-color: linear-gradient(#ffffff,#f3f3f4);
    -fx-border-width: 1 1 1 1;
    -fx-border-color: #b4b4b4 transparent #b4b4b4 transparent;
    -fx-font-size: 1.083333em; /*13px;*/
    -fx-text-fill: #292929;
}
 
.dialog:no-masthead > * > .content-pane {
    -fx-padding: 16 16 0 16;
}

.dialog:no-masthead > * > .content-pane .graphic {
    -fx-padding: 0 10 0 0;
}

.dialog:no-masthead > * > .content-pane .expandable-content {
    -fx-padding: 16 8 0 8;
}

.dialog:masthead > * > .content-pane {
    -fx-padding: 0 0 0 0;
}

.dialog:masthead > * > .content-pane .center {
    -fx-padding: 16 16 0 16;
}

.dialog:masthead > * > .content-pane .expandable-content {
    -fx-padding: 16 16 0 16;
}



/*******************************************************************************
 *                                                                             *
 * Expandable Dialog                                                           *
 *                                                                             *
 ******************************************************************************/

.dialog .more-info-dialog {
    -fx-background-color: #eeeeee;
    -fx-padding: 15 18 8 18;
}

.dialog .more-info-dialog > .button-bar {
    -fx-padding: 12 0 6 12;
    -fx-alignment: CENTER_RIGHT;
}

.dialog .details-button.more  {
  -fx-alignment: baseline-left;
  -fx-focus-traversable: false;
  -fx-padding: 5 5 5 0;
}

.dialog .details-button:hover {
    -fx-underline: true;
}

.dialog .icon-up {
	-fx-shape:"m 349.99845,528.19757 5.04282,5.02927 0,1.26897 -1.04554,0.89945 -0.99159,0 -3.00569,-3.23952 -3.13233,3.23952 -1.01852,0 -0.84754,-0.96612 0,-1.06887 z";
    -fx-padding: 4 4 4 4;
    -fx-background-insets: 3.0px -2.0px 4.0px -2.0px;
    -fx-border-color: linear-gradient(rgb(251.0, 251.0, 251.0, 0.8), rgb(240.0, 240.0, 240.0, 0.8));
    -fx-border-width: 1.0px;
    -fx-border-insets: 3.0px -2.0px 4.0px -2.0px;
    -fx-background-color: rgb(51.0, 51.0, 51.0);
}

.dialog .icon-down {
    -fx-shape:"m 349.99845,535.39526 5.04282,-5.02927 0,-1.26897 -1.04554,-0.89945 -0.99159,0 -3.00569,3.23952 -3.13233,-3.23952 -1.01852,0 -0.84754,0.96612 0,1.06887 z";
    -fx-padding: 4px;
    -fx-background-insets: 4px -2px 3px -2px;
    -fx-border-color: linear-gradient(rgb(251.0, 251.0, 251.0, 0.8), rgb(240.0, 240.0, 240.0, 0.8));
    -fx-border-width: 1px;
    -fx-border-insets: 4px -2px 3px -2px;
    -fx-background-color: rgb(51, 51, 51);
}

.dialog .button.arrowbutton {
	-fx-border-radius: 3.0em;
	-fx-border-color: rgb(140.0, 140.0, 140.0);
	-fx-border-width: 1.0px;
	-fx-background-radius: 3.0em;
	-fx-background-color: linear-gradient(rgb(253.0, 253.0, 253.0), rgb(231.0, 231.0, 231.0)),
		linear-gradient(rgb(246.0, 246.0, 246.0) 25.0%, rgb(198.0, 198.0, 198.0) );
	-fx-background-insets: 0.0px, 2.0px;
	-fx-padding: 0.1em 0.4em 0.1em 0.4em
}

.dialog .button.arrowbutton:focused {
    -fx-border-color: rgb(60.0, 127.0, 177.0);
    -fx-background-color: linear-gradient(rgb(253.0, 253.0, 253.0), rgb(220.0, 233.0, 239.0)),
        linear-gradient(rgb(240.0, 248.0, 254.0) 25.0%, rgb(159.0, 207.0, 233.0) );
}

.dialog .button.arrowbutton:armed {
    -fx-border-color: rgb(44.0, 98.0, 139.0);
    -fx-background-color:
        linear-gradient(rgb(231.0, 244.0, 250.0) 25.0%, rgb(189.0, 221.0, 237.0) 50%, rgb(144.0, 198.0, 227.0) 50%, rgb(97.0, 168.0, 205.0));
    -fx-effect: innershadow(one-pass-box, rgb(94.0, 94.0, 94.0, 0.5), 4.0, 0.1, 2.0, 2.0); 
}

.dialog .button.arrowbutton:focused .icon-up, .dialog .button.arrowbutton:focused .icon-down {
    -fx-border-color: linear-gradient(rgb(253.0, 253.0, 253.0, 0.8), rgb(220.0, 233.0, 239.0, 0.8));
}



/*******************************************************************************
 *                                                                             *
 * Command Link                                                                *
 *                                                                             *
 ******************************************************************************/
 /* For the text displayed above command-link buttons (but below the masthead) */
.dialog > * > .content-pane .command-link-message {
    -fx-font-size: 1.25em; 
}

.dialog .command-link-button {
    -fx-padding: 10 10 10 10;
}

.dialog .command-link-button > .container > .line-1 {
    -fx-font-size: 1.25em; 
    -fx-padding: -5 0 0 5;
}

.dialog .command-link-button > .container > .line-2 {
    -fx-font-size: 1em; 
    -fx-padding: 0 0 0 5;
}

.dialog .command-link-button > .container > .graphic-container {
    -fx-padding: 10 10 0 0
}

